--- a/index.css
+++ b/index.css
@@ -20,3 +20,28 @@ h2{
 p{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.vertical a{
+    text-decoration: none
+}
+
+.none-style{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+}
+
+.vertical a{
+    display: block;
+    width: 120px;
+    color: #fff;
+    background-color: #98bf21;
+    text-align: center;
+    padding: 4px;
+}
+
+.vertical a:hover, .vertical a:active{
+    background-color: #7A991A; 
+}
