--- a/index.css
+++ b/index.css
@@ -22,9 +22,6 @@ p{
 }
 
 
-.vertical a{
-    text-decoration: none
-}
 
 .none-style{
     list-style-type: none;
@@ -34,6 +31,7 @@ p{
 }
 
 .vertical a{
+    text-decoration: none;
     display: block;
     width: 120px;
     color: #fff;
@@ -44,4 +42,26 @@ p{
 
 .vertical a:hover, .vertical a:active{
     background-color: #7A991A; 
+}
+
+
+.horizontal{
+    float: left;
+    margin: 0;
+    padding: 0;
+
+}
+
+.horizontal a{
+    text-decoration: none;
+    margin: 0;
+    color: #fff;
+    background-color: #98bf21;
+    text-align: center;
+    padding: 4px;
+
+}
+
+.horizontal a:hover,.horizontal a:active{
+    background-color: #7A991A
 }
