--- a/encabezado.css
+++ b/encabezado.css
@@ -24,3 +24,26 @@ a{
     transition: background-color 1s linear;
 }
 
+input,button{
+    font-size: 16px;
+    color: #000;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.3);
+    transition: background-color 1s linear;
+
+}
+
+a:hover, input:hover, button:hover,
+a:focus, input:focus, button:focus{
+    background-color:#fff;
+}
+
+a:focus, input:focus, button:focus{
+    box-shadow: 0 0 0 3px rgba(0,0,0, 0.25);
+    outline: 0;
+}
+
+input,button{
+    border: 0;
+}
+
